# chip-shop

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  hello.py  open-chip-shop.sh  os.md  pyproject.toml  requirements.txt  run_data.sh  run_tests.sh  setup.sh  setup_data.sh
.github/workflows/: main.yml
machine-setup/: admin.sh  de-setup.sh  hdd.md  permissions.md  setup.sh  tailscale.md  temp.sh  user.sh
notebooks/: DATA-uk_gov_hm_land_registry_price_paid.ipynb  TestNotebook.ipynb  police_force.parquet  scratch.ipynb  uk_gov_dept_for_transport_road_accident_chloropleth.ipynb  uk_gov_dept_for_transport_road_accident_exporitory.ipynb  uk_gov_dept_for_transport_road_accident_heatmap.ipynb  uk_gov_dept_for_transport_road_accidents.ipynb  uk_gov_dept_for_transport_road_accidents_chloropleth.ipynb  uk_gov_dept_for_transport_road_accidents_exporitory.ipynb  uk_gov_dept_for_transport_road_accidents_heatmap.ipynb
notebooks/data/: uk_gov_hm_land_registry_price_paid.ipynb
setup/: README.md  de-setup.sh  github_ssh.md  hdd.md  permissions.md  secure-ssh-vpn-guide.md  secure_ssh_vpn_guide.md  setup.sh  tailscale.md  user.sh
src/fryer/: __init__.py  all.py  config.py  constants.py  datetime.py  logger.py  map.py  monitoring.html  monitoring.py  path.py  requests.py  transformer.py  typing.py
src/fryer/counter/: __init__.py  email.py  monitor.html  monitor.py
src/fryer/data/: __init__.py  all.py  gov_uk_compare_school_performance.py  gov_uk_hm_land_registry_price_paid.py  monitor.html  monitor.py  ons_local_authority_district_boundaries.py  os_codepoint_postcode.py  os_codepoint_postcodes.py  postcodes.py  uk_gov_compare_school_performance.py  uk_gov_dept_for_transport_road_accident.py  uk_gov_dept_for_transport_road_accidents.py  uk_gov_hm_land_registry_price_paid.py  uk_gov_ons_geo.py  uk_gov_ons_postcode.py  uk_gov_ons_postcode_directory.py  uk_police_crime_data.py
tests/: test.py  test_transformer.py
tests/test_fryer/: conftest.py  test_all.py  test_config.py  test_datetime.py  test_logger.py  test_monitor.py  test_path.py  test_requests.py  test_transformer.py
tests/test_fryer/test_counter/: test_monitor.py
tests/test_fryer/test_data/: test_gov_uk_compare_school_performance.py  test_gov_uk_hm_land_registry_price_paid.py  test_os_codepoint_postcode.py  test_os_codepoint_postcodes.py  test_uk_gov_compare_school_performance.py  test_uk_gov_dept_for_transport_road_accident.py  test_uk_gov_dept_for_transport_road_accidents.py  test_uk_gov_hm_land_registry_price_paid.py  test_uk_gov_ons_geo.py  test_uk_gov_ons_postcode.py  test_uk_gov_ons_postcode_directory.py  test_uk_police_crime_data.py
ubuntu_installation_guide/: README.md
ubuntu_installation_guide/ubuntu_installation_guide/: README.md
