[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fryer"]

[project]
name = "chip-shop"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convertbng>=0.7.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.14.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test that needs external data sources.",
]
addopts = "--cov=fryer --cov-report term-missing"
