[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fryer"]

[project]
name = "chip-shop"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convertbng>=0.7.5",
    "fastexcel>=0.12.0",
    "folium>=0.19.3",
    "geopandas>=1.0.1",
    "jupyterlab>=4.3.3",
    "lxml>=5.3.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.18.0",
    "psutil>=6.1.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "tqdm>=4.67.1",
]

# uv add --group <group_name> <package_name>

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test that needs external data sources.",
]
addopts = "--cov=fryer --cov-report term-missing"
